--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "ed2curve": "^0.3.0",
+    "express": "^4.17.1",
     "moment": "^2.29.0",
+    "mongodb": "^4.2.2",
     "morgan": "^1.10.0",
     "mssql": "^6.2.1",
     "sequelize": "^6.3.5",
