--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server",
   "main": "index.js",
   "scripts": {
-    "build": "babel routes.js index.js -d dist && babel api -d dist/api && babel model -d dist/model && babel repository -d dist/repository",
+    "build": "babel routes.js index.js -d dist && babel api -d dist/api",
     "start": "npm run build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
