--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "morgan": "^1.10.0",
     "mssql": "^6.2.1",
     "sequelize": "^6.3.5",
+    "string-hex": "^1.0.0",
     "tedious": "^9.2.1",
-    "tweetnacl": "^0.14.5"
+    "tweetnacl": "^0.14.5",
+    "xumm-sdk": "^1.7.0"
   }
 }
